fixed nav bar text spacing

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -426,13 +426,13 @@ textarea {
 }
 
 .nav nav {
-  margin-left: 150px;
+  margin-left: 200px;
   /*margin-top: 5px;*/
 }
 
 .nav ul {
   float: left;
-  padding-left: 100px;
+  padding-left: 60px;
 }
 
 .parent {
